Updated the list design

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
 #main {
   width: 98%;
-  height: 100vw;
+  height: max-content;
   background-color: #eeeeee;
   margin-top: 2%;
   margin-bottom: 2%;
@@ -34,7 +34,7 @@ body {
   background-color: white;
   margin: auto;
   display: flex;
-  flex-shrink: 1;
+  flex-grow: 0;
   justify-content: center;
 }
 
@@ -47,14 +47,45 @@ body {
 
 #main #img-div figure {
   width: 80%;
+  max-width: max-content;
 }
 
 #main #img-div figure #image {
   width: 100%;
 }
 
-#main #tribute-info #the-list {
+#main #tribute-info {
   display: flex;
   flex-direction: column;
-  margin-top: 1em;
+  margin: auto;
+  margin-top: 4em;
+  align-items: center;
+  width: 50%;
 }
+#main #tribute-info fieldset {
+  border: none;
+}
+#main #tribute-info fieldset legend {
+  font-size: 1.5em;
+  font-weight: 700;
+  color: #333333;
+  margin-bottom: 2em;
+  text-align: center;
+}
+#main #tribute-info #the-list {
+  padding: 0;
+}
+#main #tribute-info #the-list li {
+  font-size: 1.05em;
+  margin-bottom: 1em;
+}
+
+#main #tribute-info #quote {
+  width: 100%;
+}
+#main #tribute-info #quote p {
+  text-align: left;
+  font-size: 1.05em;
+}
+
+
